[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "janusbio"
version = "0.3.0"
description = "JANUS: Joint ANalysis for augmentation of clUSter specificity"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "art==6.4",
    "emoji==2.14.1",
    "joblib==1.4.2",
    "loguru==0.7.3",
    "matplotlib==3.10.1",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "scikit_learn==1.6.1",
    "statsmodels==0.14.4",
    "tqdm==4.67.1",
]

[project.scripts]
janus = "janusbio.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/janusbio"]